force-app/main/default/objects/PreVenta__c/fields/Numero_Casa_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Numero_Casa_Trabajo__c</fullName>
    <label>Numero Casa Trabajo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>