force-app/main/default/objects/PreVenta__c/fields/Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Ocupacion__c</fullName>
    <label>Ocupación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>