force-app/main/default/objects/PreVenta__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario de la PreVenta</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PreVentas</relationshipName>
    <type>Lookup</type>
</CustomField>