force-app/main/default/objects/PreVenta__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Teléfono Móvil</label>
    <type>Phone</type>
</CustomField>