force-app/main/default/objects/PreVenta__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Código postal del trabajo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>