force-app/main/default/objects/PreVenta__c/fields/Producto_Interes__c.field-meta.xml
<CustomField>
    <fullName>Producto_Interes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto Interes</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>PreVentas</relationshipLabel>
    <relationshipName>PreVentas</relationshipName>
    <type>Lookup</type>
</CustomField>