force-app/main/default/objects/PreVenta__c/fields/Profesion_Oficio__c.field-meta.xml
<CustomField>
    <fullName>Profesion_Oficio__c</fullName>
    <label>Profesión u Oficio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>