force-app/main/default/objects/PreVenta__c/fields/Punto_Referencia_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Punto_Referencia_Trabajo__c</fullName>
    <label>Punto Referencia Trabajo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>