force-app/main/default/objects/PreVenta__c/fields/Rango_Ingresos_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Rango_Ingresos_Mensual__c</fullName>
    <label>Rango de Ingresos Mensual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hasta 16000</fullName>
            </value>
            <value>
                <fullName>16001 - 24000</fullName>
            </value>
            <value>
                <fullName>24001 - 32000</fullName>
            </value>
            <value>
                <fullName>32001 - Adelante</fullName>
            </value>
            <value>
                <fullName>Hasta 20000</fullName>
            </value>
            <value>
                <fullName>20000 - 100000</fullName>
            </value>
            <value>
                <fullName>100000 En Adelante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>