force-app/main/default/objects/PreVenta__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Tipo de registro de candidato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>