force-app/main/default/objects/PreVenta__c/fields/Round_Robin_ID_Norte__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_ID_Norte__c</fullName>
    <formula>MOD(VALUE(Lead_Number__c) , 7) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin ID Norte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>