force-app/main/default/objects/PreVenta__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado de candidato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acepto/Aún sin charlas</fullName>
                <default>true</default>
                <label>Acepto/Aún sin charlas</label>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Bloqueado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Cita Concretada</fullName>
            </value>
            <value>
                <fullName>Contactado sin respuesta</fullName>
            </value>
            <value>
                <fullName>Contacto Interesado</fullName>
            </value>
            <value>
                <fullName>Contacto No Interesado</fullName>
            </value>
            <value>
                <fullName>Coordinando fecha de cita</fullName>
            </value>
            <value>
                <fullName>Difunto</fullName>
            </value>
            <value>
                <fullName>En Negociación</fullName>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Excluido</fullName>
            </value>
            <value>
                <fullName>Ilocalizable</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>No está interesado/Cierre de operaciones</fullName>
            </value>
            <value>
                <fullName>No Interesado</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Se presentó y en espera de respuesta</fullName>
            </value>
            <value>
                <fullName>Solicitando Cita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>