force-app/main/default/objects/PreVenta__c/fields/Tipo_Comercio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Comercio__c</fullName>
    <label>Tipo Comercio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Informal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>