force-app/main/default/objects/PreVenta__c/fields/Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento__c</fullName>
    <label>Tratamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>Sra.</fullName>
            </value>
            <value>
                <fullName>Lic.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Ing.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>