force-app/main/default/objects/PreVenta__c/fields/Unificar__c.field-meta.xml
<CustomField>
    <fullName>Unificar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unificar</label>
    <type>Checkbox</type>
</CustomField>