force-app/main/default/objects/PreVenta__c/fields/Usuario_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Referencia__c</fullName>
    <label>Usuario de Referencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>