force-app/main/default/objects/PreVenta__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Sitio Web</label>
    <type>Url</type>
</CustomField>