force-app/main/default/objects/PreVenta__c/recordTypes/Juridico.recordType-meta.xml
<RecordType>
    <fullName>Juridico</fullName>
    <active>true</active>
    <label>Juridico</label>
</RecordType>