force-app/main/default/objects/PreVenta__c/recordTypes/Natural.recordType-meta.xml
<RecordType>
    <fullName>Natural</fullName>
    <active>true</active>
    <label>Natural</label>
</RecordType>