force-app/main/default/objects/PreVenta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LastName__c</columns>
    <columns>FirstName__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Tipo_Identificacion__c</columns>
    <columns>Identificacion__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LeadSource__c</columns>
    <columns>Motivo_Contacto__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>