force-app/main/default/objects/PreVenta__c/listViews/Creados_Hoy.listView-meta.xml
<ListView>
    <fullName>Creados_Hoy</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Motivo_Contacto__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>1/30/2019 12:00 AM</value>
    </filters>
    <label>Creados Hoy</label>
</ListView>