force-app/main/default/objects/PreVenta__c/listViews/Hondurenos_en_el_Mundo.listView-meta.xml
<ListView>
    <fullName>Hondurenos_en_el_Mundo</fullName>
    <columns>NAME</columns>
    <columns>Nombre_Empresa__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LeadSource__c</columns>
    <columns>Pais_Residencia__c</columns>
    <columns>Departamento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LeadSource__c</field>
        <operation>equals</operation>
        <value>Web</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>7/5/2021 12:00 AM</value>
    </filters>
    <label>Hondureños en el Mundo</label>
</ListView>