force-app/main/default/objects/PreVenta__c/listViews/Prospectos_Empresas.listView-meta.xml
<ListView>
    <fullName>Prospectos_Empresas</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Nombre_Comercial__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>LeadSource__c</columns>
    <columns>Motivo_Contacto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>lpena,krosa</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PreVenta__c.Juridico</value>
    </filters>
    <label>Prospectos Empresas</label>
</ListView>